--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -87,7 +87,8 @@
   body * {
     visibility: hidden;
   }
-  .printable-area, .printable-area * {
+  .printable-area,
+  .printable-area * {
     visibility: visible;
   }
   .printable-area {
